#23: replaced deprecated elements